# initiatives

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_new-initiative.yaml
.github/workflows/: typecheck.yml  validate-issue.yml
validator/: README.md  __main__.py  checks.py  constants.py  github.py  headings.py  markdown.py  repo.py  report.py  types.py  validate.py
