[project]
name = "geojupyter-initiatives-validator"
version = "0.1.0"
description = "Validate (lint) GeoJupyter initiatives for expected structure"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "mistletoe",
  "nltk",
  "pygithub",
  "yarl",
]


[dependency-groups]
dev = [
    "mypy>=1.19.1",
]


[tool.mypy]
packages = ["validator"]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "nltk",
]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = [
  "I",  # isort
]
